# Scanner-de-Vulnerabilidades-Web

./: .gitignore  .vercelignore  DEPLOY.md  LICENSE  README.md  common.py  core.py  package-lock.json  pyproject.toml  report.py  requirements.txt  vercel.json  xss.py
api/: __init__.py  main.py  scan.py
api/scan/: index.py
docs/: architecture.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.css  App.tsx  api.ts  style.css  types.ts
frontend/src/components/: ScanForm.tsx  ScanResults.tsx
scanner/: cli.py
scanner/checks/: __init__.py  common.py  headers.py  sqli.py
scanner/reporting/: __init__.py
